# instagram-business-discovery

./: .env.example  .gitignore  README.md  ig-scraper.py  pyproject.toml  readme.md
src/: cli.py  instagram_business_discovery.py
