[project]
name = "instagram-business-discovery"
version = "0.1.0"
description = "Instagram Business Discovery API Tool"
authors = [
    {name = "GT"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "click (>=8.3.0,<9.0.0)"
]

[tool.poetry.scripts]
instagram-discovery = "src.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
